src/test/error/check_cmd_malloc_fail.c
/* ************************************************************************** */
/*                                                                            */
/*                                                        :::      ::::::::   */
/*   check_cmdlst_null.c                                :+:      :+:    :+:   */
/*                                                    +:+ +:+         +:+     */
/*   By: mcha <mcha@student.42.fr>                  +#+  +:+       +#+        */
/*                                                +#+#+#+#+#+   +#+           */
/*   Created: 2022/05/30 16:27:52 by mcha              #+#    #+#             */
/*   Updated: 2022/05/30 16:28:29 by mcha             ###   ########.fr       */
/*                                                                            */
/* ************************************************************************** */

#include "head.h"

void	check_cmd_malloc_fail(t_unit_head *head)
{
	if (!head)
		exit(EXIT_FAILURE);
}
